<resources>
    <string name="app_name">AppManage</string>
    <string name="skip">Skip</string>
    <string name="unlocked_app">UnLocked</string>
    <string name="locked_app">Locked</string>
    <string name="hide_app">Hide</string>
    <string name="my_app">Me</string>

    <string name="password_null">Password cannot be empty</string>
    <string name="password_error">Password error, please re-enter</string>
    <string name="enter_password_title">Program encryption</string>
    <string name="password_input_title">Please input a password</string>
    <string name="password_input_hint">Please input a password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>
