<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_com_pare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.greetty.appmanage.ui.activity.ComPareActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/enter_password_title"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/password_input_title"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:hint="@string/password_input_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/confirm" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
